fix vlw tests on java 11.